<resources>
    <string name="app_name">rheas awesome quiz</string>
    <string name="guess_the_singer">Guess the Artist!</string>
    <string name="start">Start</string>
    <string name="one_direction">One Direction</string>
    <string name="prettymuch">Prettymuch</string>
    <string name="bts">BTS</string>
    <string name="backstreet_boys">Backstreet Boys</string>
    <string name="congratulations">Congratulations!</string>
    <string name="high_score">High Score</string>
    <string name="score">Score:</string>
    <string name="vlauvv">Lauv</string>
    <string name="troye_sivan">Troye Sivan</string>
    <string name="g_eazy">G-Eazy</string>
    <string name="prince">Prince</string>
    <string name="taylor_swift">Taylor Swift</string>
    <string name="selena_gomez">Selena Gomez</string>
    <string name="katy_perry">Katy Perry</string>
    <string name="ariana_grande">Ariana Grande</string>
    <string name="harry_styles">harry styles</string>
    <string name="niall_horan">Niall Horan</string>
    <string name="liam_paine">Liam Paine</string>
    <string name="louis_tomlinson">Louis tomlinson</string>
    <string name="cardi_b">Cardi B</string>
    <string name="nicki_minaj">nicki minaj</string>
    <string name="jloo">Jennifer Lopez</string>
    <string name="lizzo">Lizzo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
