<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BtsActivity">

    <ImageView
        android:id="@+id/bts"
        android:layout_width="400dp"
        android:layout_height="300dp"
        android:src="@drawable/bts"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />

    <Button
        android:id="@+id/oned"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/one_direction"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bts"
        />

    <Button
        android:id="@+id/prettymuch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prettymuch"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/oned"
        />

    <Button
        android:id="@+id/answer1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bts"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prettymuch"
        />

    <Button
        android:id="@+id/bb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/backstreet_boys"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answer1"
        />


</androidx.constraintlayout.widget.ConstraintLayout>