<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity3"
    android:background="@drawable/ending">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/hor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.25"
        android:orientation="horizontal"
        />

    <TextView
        android:id="@+id/ending"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hor"
        android:text="@string/congratulations"
        android:textColor="@color/black"
        android:textSize="45sp"
        />

    <TextView
        android:id="@+id/uscore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ending"
        android:text="@string/score"
        android:textSize="45sp"
        android:textColor="@color/black"
        android:layout_marginTop="50dp"
        />

    <TextView
        android:id="@+id/high"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uscore"
        android:text="@string/high_score"
        android:textSize="45sp"
        android:textColor="@color/black"
        android:layout_marginTop="50dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>